# mlsys-variations-template

./: .cursorrule  .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  .projenrc.py  .trivyignore  BRANCHING_STRATEGY.md  Dockerfile  GITHUB_ACTIONS_FIXES.md  LICENSE  Makefile  README.md  SECURITY_SCANNING.md  config.yaml  debug_config.py  demo_comprehensive.py  demo_phase2.py  docker-compose.yml  fix_linting_issues.py  mkdocs.yml  mlsys  mlx  mlx.config.json  naming.config.json  nbdoc_config.json  pyproject.toml  requirements-dev.txt  requirements-unpinned.txt  requirements.txt  run_debug_tests.py  validate_toml.py
.cursor/rules/: mlx_assistant.mdc  mlx_foundation.md  mlx_foundation.mdc  new_plugin_template.mdc  repository_overview.mdc
.github/: test_ci_basic.py
.github/workflows/: blueprints_tests.yml  cd.yml  ci.yml  dependency-check.yml  forking-tests.yml  plugin_smoke.yml  tests.yml
.projen/: deps.json  tasks.json.backup
archive/: demo_phase1.py  demo_phase2.py
assets/models/: README.md
conf/: README.md  config.yaml  ml_systems.yaml
conf/ai/: default.yaml
conf/api/: development.yaml  production.yaml
conf/data/: default.yaml
conf/logging/: default.yaml
conf/ml/: default.yaml
conf/model/: default.yaml  random_forest.yaml
conf/paths/: default.yaml
conf/prompts/: prompt_templates.yaml
conf/training/: classification.yaml
data/: README.md
data/cache/: cache_metadata.db
dev/notebooks/ai/: 01_simple_agent_demo.ipynb  02_rag_system_demo.ipynb  (+1 more)
docs/: expert-systems-engineering-guide.md  getting-started.md  glossary.md  implementation-complete-summary.md  index.md  mlx-architecture.md  mlx-assistant-guide.md  mlx-migration-progress.md  naming-configuration-guide.md  naming-migration-completeness.md  naming-system-implementation-summary.md  next-implementation-guide.md  phase-2-completion-summary.md  phase-2-implementation-guide.md  plugin-ecosystem-design.md  plugins-and-components-architecture.md  project-analysis.md  uv-package-management.md
docs/about/: changelog.md  license.md
docs/api/: README.md  data_utils.md  ml_systems.md  observability-api.md  plugin-management-api.md  workflow-api.md
docs/architecture/: 001-dual-layer-architecture.md  002-temporal-workflow-orchestration.md  003-opentelemetry-observability.md  004-plugin-type-system.md  005-hydra-pydantic-configuration.md  006-exception-hierarchy.md  007-plugin-autodiscovery.md  README.md
docs/development/: branching-strategy.md  branching_strategy.md  contributing.md  documentation.md  documentation_overview.md  forking-tests.md  github_actions_fixes.md  nbdoc_guide.md  project-setup.md  security_scanning.md  testing.md
docs/notebooks/: example_analysis.md
docs/user-guide/: data-processing.md  evaluation.md  modeling.md  project-structure.md
documentation/: README.md  nbdoc_guide.md
endpoints/: README.md
endpoints/api/: prediction.py
endpoints/batch/: batch_processor.py
endpoints/tests/: test_endpoints.py
mlx-components/: registry.json
mlx-components/api-serving/: README.md  component.json
mlx-components/config-management/: README.md  component.json
mlx-components/data-processing/: README.md  component.json
mlx-components/plugin-registry/: README.md  component.json
mlx-components/utilities/: README.md  component.json
models/: README.md
notebooks/: README.md  example_analysis.ipynb
reports/: README.md
reports/documents/: model_evaluation_report.json
scripts/: _mlsys_core.py  backup_manager.py  configure.py  critical_lint_fixer.py  dead_code_analyzer.py  lint_fixer.py  migrate_platform_naming.py  mlops_cli.py  mlx_assistant.py  naming_config.py  quality-check.sh  rename_project.py  repository_closer_report.md  test_forking_smoke.py  test_naming_system.py
scripts/debug/: debug_config.py  run_debug_tests.py  test_fix.py
scripts/evaluation/: README.md  ai_response_evaluator.py  analytics_dashboard.py  benchmark_generator.py  migrate_naming.py  mlx_eval.py  setup.py
scripts/examples/: demo_comprehensive.py
scripts/mlx/: component_extractor.py  component_injector.py  create_project.py  llm_integration.py  organize_docs.py  plugin_ecosystem.py
scripts/security/: security_hardening.py
scripts/templates/: plugin_skeleton.py.jinja  plugin_test_skeleton.py.jinja
src/: README.md  __init__.py  tabular_data_utils.py
src/ai/: __init__.py
src/analysis_template/: __init__.py  bootstrap.py  cli.py  cli_template.py
src/api/: __init__.py  app.py  models.py  routes.py  service.py
src/cli/: agent.py  ai.py  demo.py  fine_tuning.py  main.py  project.py  rag.py
src/config/: __init__.py  manager.py  models.py
src/data/: loading.py  validation.py
src/llm/: README.md  __init__.py  cli.py
src/llm_factory/: cli.py
src/ml/: inference.py  training.py
src/models/: evaluation.py  inference.py  training.py
src/platform/: __init__.py
src/plugins/: __init__.py  agents.py  base.py  llm_providers.py  tools.py
src/test_project/: __init__.py  bootstrap.py
src/utils/: cache_manager.py  common.py  rate_limiter.py  templates.py
templates/: base-cursor-rules.json
tests/: README.md  conftest.py  golden_repos.py  test_api_health.py  test_data_loading.py  test_data_processing.py  test_data_validation.py  test_example.py  test_mlx_assistant.py  test_models_evaluation.py  test_models_inference.py  test_models_training.py  test_naming_migration.py  test_tabular_data_utils.py  test_utils_common.py
tests/contracts/: test_contract_plugins.py
tests/integration/: __init__.py  test_ai_cli.py  test_api_integration.py  test_config_validation.py  test_forking_procedure.py  test_ml_systems_integration.py
tests/unit/: test_api.py  test_cache_manager.py  test_config.py  test_plugins.py  test_rate_limiter.py  test_templates.py  test_unit_api.py  test_unit_config.py  test_unit_plugins.py
tools/: fix_linting_issues.py  validate_toml.py  verify_structure_doc.py
workflows/: README.md  batch_inference.py  data_ingestion.py  feature_engineering.py  model_evaluation.py  model_training.py  validate_configs.py
workflows/tests/: test_workflow.py
(+72 files in other folders)
